delete enrolment request advanced search and student payment

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -3,6 +3,7 @@
 	" *Please enter a valid sort (1-100)": " *يرجى ادخال رقم الترتيب من (1-100)",
 	" EGP?": "ج.م ؟",
 	" Price": " السعر",
+	"#ABE-ME-12345678 ": "#ABE-ME-12345678 ",
 	"'Students who watch a well-made promo video are 5X more likely to enroll in your course": {
 		" We've seen that statistic go up to 10X for exceptionally awesome videos": {
 			" Learn how to make yours awesome!'": "' الطلاب التى تشاهد فيديوهات توضيحية ذات جودة تقوم بالأشتراك 5 أضعاف عن الطلاب الأخرين. تشير الأحصائيات الى زيادة عدد المشاهدات عشر اضعاف'"
@@ -80,6 +81,7 @@
 	"Add to Cart": "إضافة للسلة",
 	"Added to cart": "إضافة للسلة",
 	"Advanced Search": "Advanced Search",
+	"All": "All",
 	"All Courses": "كل الكورسات",
 	"All Rights Reserved": "كل الحقوق محفوظة",
 	"Already have an account?": "لديك حساب مسجل بالفعل?",
@@ -106,6 +108,7 @@
 	"By": "بواسطة",
 	"By signing up, you agree to our": "عن طريق الإشتراك أنت توافق على ",
 	"Cancel": "إلغاء",
+	"Card Name": "Card Name",
 	"Chapter": "الفصل",
 	"Chapter Description*": "الوصف التوضيحى للفصل*",
 	"Chapter Name": "اسم الفصل",
@@ -166,6 +169,8 @@
 	"Error while update chapter, please try again": "حدث خطأ خلال تعديل الفصل , يرجى المحاولة مرة اخرى",
 	"Error while update course, please try again": "حدث خطأ خلال تعديل الكورس ,يرجى المحاولة مرة اخرى",
 	"Error while update lecture, please try again": "حدث خطأ خلال تعديل المحاضرة, يرجى المحاولة مرة اخرى",
+	"Expiration Month": "Expiration Month",
+	"Expiration Year": "Expiration Year",
 	"Explore our schools to find your perfect course": "اكتشف سمارت اكاديمى ",
 	"Export": "Export",
 	"File not supported": "الملف غير مدّعم",
@@ -182,6 +187,7 @@
 	"Grade 3": "الصف 3",
 	"Grades*": "الصفوف*",
 	"History": "تاريخ",
+	"Holder Name": "Holder Name",
 	"Home": " الرئيسية ",
 	"Insert description": "اضف التفاصيل",
 	"Insert your Chapter title": {
@@ -228,12 +234,15 @@
 	"Log in": "تسجيل الدخول",
 	"Login": "تسجيل الدخول",
 	"Main Address :": "العنوان الرئيسى :",
+	"Management Users": "Management Users",
+	"Managment users": "Managment users",
 	"Match your goals to our classes, explore your options, and map out your path to success": {
 		"": "اكشتف اهدافك وابدا طريق النجاح"
 	},
 	"Math": "الرياضيات",
 	"Menu": "القائمة",
 	"Minutes": "الدقائق",
+	"Monday": "Monday",
 	"More": "المزيد",
 	"My Courses": "الكورسات الخاصة بك",
 	"My Dashboard": "الرئيسية",
@@ -256,6 +265,7 @@
 	"Physics": "الفيزياء",
 	"Please Confirm?": "يرجى التاكيد ؟",
 	"Please Don't use IDM Extension to be able to use this website": "Please Don't use IDM Extension to be able to use this website",
+	"Please Try Again": "Please Try Again",
 	"Please enter a valid mobile number or email": "يرجى إدخال رقم موبايل صحيح او ايميل صحيح",
 	"Please make sure your are entered a valid Email or Mobile, password, and Checked the reCaptcha box": "يرجى التاكد من البريد الإلكتروني أورقم الموبايل والصور المطلوبه  للتحقق",
 	"Please select a lecture": "يرجى اختيار محاضرة",
@@ -264,6 +274,7 @@
 	"Preview this course": "عرض هذا الكورس",
 	"Price": "السعر",
 	"Privacy Policy": "سياسة الخصوصية",
+	"Process Faild ": "Process Faild ",
 	"Promotional Video": "الفيديو الدعائى",
 	"Psychology": "علم نفس",
 	"Refresh table": "تجديد الجدول",
@@ -282,13 +293,16 @@
 	"Science": "جولوجيا",
 	"Search": "البحث",
 	"Search By": "Search By",
+	"Search by": "Search by",
 	"Search by Email or Phone Number": "البحث بواسطه رقم الموبايل او الإيميل",
+	"Second": "Second",
 	"Secure checkout": "الدفع المؤمن",
 	"See all": "عرض الكل",
 	"Select Chapter": "إختر الفصل",
 	"Select Course": "إختر الكورس",
 	"Select Grade": "إختر الصف",
 	"Select Language": "إختر اللغة",
+	"Select Payment Method": "Select Payment Method",
 	"Select Subjects": "إختر المواد",
 	"Select status": "Select status",
 	"Shopping cart": "كارت التسوق",
@@ -318,18 +332,21 @@
 	"Terms": "القواعد",
 	"Terms of Use": "قواعد الأستحدام",
 	"Thank You": " شكرا لك",
+	"Thursday": "Thursday",
 	"Title": "العنوان",
 	"Total Chapters": "اجمالى الفصول",
 	"Total Cost": "اجمالى التكلفة",
 	"Total Courses": "اجمالى الكورسات",
 	"Total Sales": "اجمالى المبيعات",
 	"Total Students": "اجمالى الطلاب",
+	"Tuesday": "Tuesday",
 	"Unblock": "حذف الحظر",
 	"Unexpected error occurred, please try again": "حدث خطأ غير متوقع, يرجى المحاولة مرة اخرى",
 	"Upload Video or File*": "حمل فيديو / ملف*",
 	"User Name": "User Name",
 	"View Saved Chapters": "عرض الفصول المسجلة",
 	"View Saved Lecture": "عرض المحاضرات المسجلة",
+	"Wednesday": "Wednesday",
 	"Welcome Back": "مرحبا بعودتك",
 	"Welcome to Smart Academy": "مرحبا بك فى سمارت اكاديمى",
 	"You account has beed activated successfully, please login": {
@@ -341,13 +358,17 @@
 	"You are not allowed to view this video or an error occurred, please try again": "غير مسموح لك بمشاهدة الفيديو حدث خطأ ما, من فضلك حاول مجددا",
 	"You are not authorized to view this Url": "ليس لديك الصلاجية لمشاهدة هذا الرابط",
 	"You are not authorized, you have been logged out": "شاهدة هذا الرابط , تم تسجيل الخروج",
+	"Your Order Number": "Your Order Number",
+	"Your Order is Confirmed!": "Your Order is Confirmed!",
 	"Your browser does not support the video tag": {
 		"": "لا يدعم المتصفح الخاص بك هذا الامتداد."
 	},
 	"Your order submitted successfully": "لقد تم تسجيل طلبك بنجاح",
 	"and": "و",
+	"arabic": "arabic",
 	"block": "block",
 	"blocked Successfully": "blocked Successfully",
+	"both": "both",
 	"cancel": "إلغاء",
 	"cancel edit": "إلغاء التعديل",
 	"chapter name:": "اسم الفصل:",
@@ -358,11 +379,14 @@
 	"course Title": "عنوان الكورس",
 	"course name:": "اسم الكورس:",
 	"create Date": "تاريخ الإنشاء",
+	"delete enrollment request": "delete enrollment request",
 	"email": "الإيميل",
 	"example: Elkashef": "مثال : محمود",
 	"example: Hossam": " مثال : محمد",
 	"fee": "الرسوم",
+	"first": "first",
 	"first Name": "الإسم الأول",
+	"grade": "grade",
 	"instructor": "المحاضر",
 	"instructor mobile number:": "رقم محمول المحاضر:",
 	"instructor name:": "اسم المحاضر:",
@@ -386,6 +410,7 @@
 	"please enter a valid password, min 8 characters": "   من فضلك ادخل كلمة مرور صحيحة ,اقل عدد  8حروف ",
 	"please try again": "please try again",
 	"please try again!": "please try again!",
+	"saturday": "saturday",
 	"sign Up": "الإشتراك",
 	"sign Up as": "الإشتراك كـ",
 	"sort": "الترتيب",
@@ -393,6 +418,8 @@
 	"student": "الطالب",
 	"student mobile number:": "رقم محمول الطالب:",
 	"student name:": "اسم الطالب:",
+	"subject Name": "subject Name",
+	"sunday": "sunday",
 	"this chapter contains lectures, can't be deleted": "يحتوى هذا الفصل على محاضرات,لا يمكن حذفه",
 	"this course contains chapters, can't be deleted": "يحتوى هذا الكورس على فصول , لا يمكن حذفه",
 	"time m": "الوقت د ",
