--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,6 +3,7 @@
 	" *Please enter a valid sort (1-100)": " *Please enter a valid sort (1-100)",
 	" EGP?": " EGP?",
 	" Price": " Price",
+	"#ABE-ME-12345678 ": "#ABE-ME-12345678 ",
 	"'Students who watch a well-made promo video are 5X more likely to enroll in your course": {
 		" We've seen that statistic go up to 10X for exceptionally awesome videos": {
 			" Learn how to make yours awesome!'": "'Students who watch a well-made promo video are 5X more likely to enroll in your course. We've seen that statistic go up to 10X for exceptionally awesome videos. Learn how to make yours awesome!'"
@@ -80,6 +81,7 @@
 	"Add to Cart": "Add to Cart",
 	"Added to cart": "Added to cart",
 	"Advanced Search": "Advanced Search",
+	"All": "All",
 	"All Courses": "All Courses",
 	"All Rights Reserved": "All Rights Reserved",
 	"Already have an account?": "Already have an account?",
@@ -106,6 +108,7 @@
 	"By": "By",
 	"By signing up, you agree to our": "By signing up, you agree to our",
 	"Cancel": "Cancel",
+	"Card Name": "Card Name",
 	"Chapter": "Chapter",
 	"Chapter Description*": "Chapter Description*",
 	"Chapter Name": "Chapter Name",
@@ -166,6 +169,8 @@
 	"Error while update chapter, please try again": "Error while update chapter, please try again",
 	"Error while update course, please try again": "Error while update course, please try again",
 	"Error while update lecture, please try again": "Error while update lecture, please try again",
+	"Expiration Month": "Expiration Month",
+	"Expiration Year": "Expiration Year",
 	"Explore our schools to find your perfect course": "Explore our schools to find your perfect course",
 	"Export": "Export",
 	"File not supported": "File not supported",
@@ -182,6 +187,7 @@
 	"Grade 3": "Grade 3",
 	"Grades*": "Grades*",
 	"History": "History",
+	"Holder Name": "Holder Name",
 	"Home": "Home",
 	"Insert description": "Insert description",
 	"Insert your Chapter title": {
@@ -228,12 +234,15 @@
 	"Log in": "Log in",
 	"Login": "Login",
 	"Main Address :": "Main Address :",
+	"Management Users": "Management Users",
+	"Managment users": "Managment users",
 	"Match your goals to our classes, explore your options, and map out your path to success": {
 		"": "Match your goals to our classes, explore your options, and map out your path to success."
 	},
 	"Math": "Math",
 	"Menu": "Menu",
 	"Minutes": "Minutes",
+	"Monday": "Monday",
 	"More": "More",
 	"My Courses": "My Courses",
 	"My Dashboard": "My Dashboard",
@@ -256,6 +265,7 @@
 	"Physics": "Physics",
 	"Please Confirm?": "Please Confirm?",
 	"Please Don't use IDM Extension to be able to use this website": "Please Don't use IDM Extension to be able to use this website",
+	"Please Try Again": "Please Try Again",
 	"Please enter a valid mobile number or email": "Please enter a valid mobile number or email",
 	"Please make sure your are entered a valid Email or Mobile, password, and Checked the reCaptcha box": "Please make sure your are entered a valid Email or Mobile, password, and Checked the reCaptcha box",
 	"Please select a lecture": "Please select a lecture",
@@ -264,6 +274,7 @@
 	"Preview this course": "Preview this course",
 	"Price": "Price",
 	"Privacy Policy": "Privacy Policy",
+	"Process Faild ": "Process Faild ",
 	"Promotional Video": "Promotional Video",
 	"Psychology": "Psychology",
 	"Refresh table": "Refresh table",
@@ -282,13 +293,16 @@
 	"Science": "Science",
 	"Search": "Search",
 	"Search By": "Search By",
+	"Search by": "Search by",
 	"Search by Email or Phone Number": "Search by Email or Phone Number",
+	"Second": "Second",
 	"Secure checkout": "Secure checkout",
 	"See all": "See all",
 	"Select Chapter": "Select Chapter",
 	"Select Course": "Select Course",
 	"Select Grade": "Select Grade",
 	"Select Language": "Select Language",
+	"Select Payment Method": "Select Payment Method",
 	"Select Subjects": "Select Subjects",
 	"Select status": "Select status",
 	"Shopping cart": "Shopping cart",
@@ -318,18 +332,21 @@
 	"Terms": "Terms",
 	"Terms of Use": "Terms of Use",
 	"Thank You": "Thank You",
+	"Thursday": "Thursday",
 	"Title": "Title",
 	"Total Chapters": "Total Chapters",
 	"Total Cost": "Total Cost",
 	"Total Courses": "Total Courses",
 	"Total Sales": "Total Sales",
 	"Total Students": "Total Students",
+	"Tuesday": "Tuesday",
 	"Unblock": "Unblock",
 	"Unexpected error occurred, please try again": "Unexpected error occurred, please try again",
 	"Upload Video or File*": "Upload Video or File*",
 	"User Name": "User Name",
 	"View Saved Chapters": "View Saved Chapters",
 	"View Saved Lecture": "View Saved Lecture",
+	"Wednesday": "Wednesday",
 	"Welcome Back": "Welcome Back",
 	"Welcome to Smart Academy": "Welcome to Smart Academy",
 	"You account has beed activated successfully, please login": {
@@ -341,13 +358,17 @@
 	"You are not allowed to view this video or an error occurred, please try again": "You are not allowed to view this video or an error occurred, please try again",
 	"You are not authorized to view this Url": "You are not authorized to view this Url",
 	"You are not authorized, you have been logged out": "You are not authorized, you have been logged out",
+	"Your Order Number": "Your Order Number",
+	"Your Order is Confirmed!": "Your Order is Confirmed!",
 	"Your browser does not support the video tag": {
 		"": "Your browser does not support the video tag."
 	},
 	"Your order submitted successfully": "Your order submitted successfully",
 	"and": "and",
+	"arabic": "arabic",
 	"block": "block",
 	"blocked Successfully": "blocked Successfully",
+	"both": "both",
 	"cancel": "Cancel",
 	"cancel edit": "Cancel Edit",
 	"chapter name:": "Chapter Name:",
@@ -358,11 +379,14 @@
 	"course Title": "Course Title",
 	"course name:": "Course Name:",
 	"create Date": "Create Date",
+	"delete enrollment request": "delete enrollment request",
 	"email": "Email",
 	"example: Elkashef": "example: Elkashef",
 	"example: Hossam": "example: Hossam",
 	"fee": "Fee",
+	"first": "first",
 	"first Name": "First Name",
+	"grade": "grade",
 	"instructor": "Instructor",
 	"instructor mobile number:": "Instructor Mobile Number:",
 	"instructor name:": "Instructor Name:",
@@ -386,6 +410,7 @@
 	"please enter a valid password, min 8 characters": "Please enter a valid password, min 8 characters",
 	"please try again": "please try again",
 	"please try again!": "please try again!",
+	"saturday": "saturday",
 	"sign Up": "Sign Up",
 	"sign Up as": "Sign Up as",
 	"sort": "Sort",
@@ -393,6 +418,8 @@
 	"student": "Student",
 	"student mobile number:": "Student Mobile Number:",
 	"student name:": "Student Name:",
+	"subject Name": "subject Name",
+	"sunday": "sunday",
 	"this chapter contains lectures, can't be deleted": "This chapter contains lectures, can't be deleted",
 	"this course contains chapters, can't be deleted": "This course contains chapters, can't be deleted",
 	"time m": "Time m",
