search all courses student

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -96,6 +96,7 @@
 	"Are you sure you want to Reject this payment of ": "هل تريد الغا هذا الدفع؟",
 	"Are you sure you want to block this user? ": "Are you sure you want to block this user? ",
 	"Are you sure you want to delete this chapter?": "هل تريد إزالة هذا الفصل ؟",
+	"Are you sure you want to delete this request": "Are you sure you want to delete this request",
 	"Are you sure you want to reject this course? ": "هل تريد إلغاء هذا الكورس؟ ",
 	"Are you sure you want to reject this instructor? ": "هل تريد إلغاء هذا المحاضر ؟ ",
 	"Are you sure you want to remove all chapters?": "هل تريد حذف كل الفصول ؟",
@@ -143,6 +144,7 @@
 	"Date from": "Date from",
 	"Date to": "Date to",
 	"Deactivated Successfully": "تم الإلغاء بنجاح",
+	"Deleted Successfully": "Deleted Successfully",
 	"Description": "الوصف",
 	"Disabled": "Disabled",
 	"Do you want to play the from this browser": "Do you want to play the from this browser",
