--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -96,6 +96,7 @@
 	"Are you sure you want to Reject this payment of ": "Are you sure you want to Reject this payment of ",
 	"Are you sure you want to block this user? ": "Are you sure you want to block this user? ",
 	"Are you sure you want to delete this chapter?": "Are you sure you want to delete this chapter?",
+	"Are you sure you want to delete this request": "Are you sure you want to delete this request",
 	"Are you sure you want to reject this course? ": "Are you sure you want to reject this course? ",
 	"Are you sure you want to reject this instructor? ": "Are you sure you want to reject this instructor? ",
 	"Are you sure you want to remove all chapters?": "Are you sure you want to remove all chapters?",
@@ -143,6 +144,7 @@
 	"Date from": "Date from",
 	"Date to": "Date to",
 	"Deactivated Successfully": "Deactivated Successfully",
+	"Deleted Successfully": "Deleted Successfully",
 	"Description": "Description",
 	"Disabled": "Disabled",
 	"Do you want to play the from this browser": "Do you want to play the from this browser",
