No Results Found

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -295,7 +295,6 @@
 	"Science": "جولوجيا",
 	"Search": "البحث",
 	"Search By": "Search By",
-	"Search by": "Search by",
 	"Search by Email or Phone Number": "البحث بواسطه رقم الموبايل او الإيميل",
 	"Second": "Second",
 	"Secure checkout": "الدفع المؤمن",
@@ -334,6 +333,7 @@
 	"Terms": "القواعد",
 	"Terms of Use": "قواعد الأستحدام",
 	"Thank You": " شكرا لك",
+	"Third": "Third",
 	"Thursday": "Thursday",
 	"Title": "العنوان",
 	"Total Chapters": "اجمالى الفصول",
@@ -420,7 +420,6 @@
 	"student": "الطالب",
 	"student mobile number:": "رقم محمول الطالب:",
 	"student name:": "اسم الطالب:",
-	"subject Name": "subject Name",
 	"sunday": "sunday",
 	"this chapter contains lectures, can't be deleted": "يحتوى هذا الفصل على محاضرات,لا يمكن حذفه",
 	"this course contains chapters, can't be deleted": "يحتوى هذا الكورس على فصول , لا يمكن حذفه",
