--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -295,7 +295,6 @@
 	"Science": "Science",
 	"Search": "Search",
 	"Search By": "Search By",
-	"Search by": "Search by",
 	"Search by Email or Phone Number": "Search by Email or Phone Number",
 	"Second": "Second",
 	"Secure checkout": "Secure checkout",
@@ -334,6 +333,7 @@
 	"Terms": "Terms",
 	"Terms of Use": "Terms of Use",
 	"Thank You": "Thank You",
+	"Third": "Third",
 	"Thursday": "Thursday",
 	"Title": "Title",
 	"Total Chapters": "Total Chapters",
@@ -420,7 +420,6 @@
 	"student": "Student",
 	"student mobile number:": "Student Mobile Number:",
 	"student name:": "Student Name:",
-	"subject Name": "subject Name",
 	"sunday": "sunday",
 	"this chapter contains lectures, can't be deleted": "This chapter contains lectures, can't be deleted",
 	"this course contains chapters, can't be deleted": "This course contains chapters, can't be deleted",
