--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -252,6 +252,7 @@
 	"Next": "التالى",
 	"No": "رفض",
 	"No Description": "No Description",
+	"No Results Found": "No Results Found",
 	"No result found": "لا توجد نتائج",
 	"Or": "أو",
 	"Order Details": "بيانات الطلبات",
