--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -252,6 +252,7 @@
 	"Next": "Next",
 	"No": "No",
 	"No Description": "No Description",
+	"No Results Found": "No Results Found",
 	"No result found": "No result found",
 	"Or": "Or",
 	"Order Details": "Order Details",
