--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -96,6 +96,7 @@
 	"Are you sure you want to Reject this payment of ": "هل تريد الغا هذا الدفع؟",
 	"Are you sure you want to block this user? ": "Are you sure you want to block this user? ",
 	"Are you sure you want to delete this chapter?": "هل تريد إزالة هذا الفصل ؟",
+	"Are you sure you want to delete this request": "Are you sure you want to delete this request",
 	"Are you sure you want to reject this course? ": "هل تريد إلغاء هذا الكورس؟ ",
 	"Are you sure you want to reject this instructor? ": "هل تريد إلغاء هذا المحاضر ؟ ",
 	"Are you sure you want to remove all chapters?": "هل تريد حذف كل الفصول ؟",
@@ -143,6 +144,7 @@
 	"Date from": "Date from",
 	"Date to": "Date to",
 	"Deactivated Successfully": "تم الإلغاء بنجاح",
+	"Deleted Successfully": "Deleted Successfully",
 	"Description": "الوصف",
 	"Disabled": "Disabled",
 	"Do you want to play the from this browser": "Do you want to play the from this browser",
@@ -250,6 +252,7 @@
 	"Next": "التالى",
 	"No": "رفض",
 	"No Description": "No Description",
+	"No Results Found": "No Results Found",
 	"No result found": "لا توجد نتائج",
 	"Or": "أو",
 	"Order Details": "بيانات الطلبات",
@@ -293,7 +296,6 @@
 	"Science": "جولوجيا",
 	"Search": "البحث",
 	"Search By": "Search By",
-	"Search by": "Search by",
 	"Search by Email or Phone Number": "البحث بواسطه رقم الموبايل او الإيميل",
 	"Second": "Second",
 	"Secure checkout": "الدفع المؤمن",
@@ -332,6 +334,7 @@
 	"Terms": "القواعد",
 	"Terms of Use": "قواعد الأستحدام",
 	"Thank You": " شكرا لك",
+	"Third": "Third",
 	"Thursday": "Thursday",
 	"Title": "العنوان",
 	"Total Chapters": "اجمالى الفصول",
@@ -418,7 +421,6 @@
 	"student": "الطالب",
 	"student mobile number:": "رقم محمول الطالب:",
 	"student name:": "اسم الطالب:",
-	"subject Name": "subject Name",
 	"sunday": "sunday",
 	"this chapter contains lectures, can't be deleted": "يحتوى هذا الفصل على محاضرات,لا يمكن حذفه",
 	"this course contains chapters, can't be deleted": "يحتوى هذا الكورس على فصول , لا يمكن حذفه",
