--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -96,6 +96,7 @@
 	"Are you sure you want to Reject this payment of ": "Are you sure you want to Reject this payment of ",
 	"Are you sure you want to block this user? ": "Are you sure you want to block this user? ",
 	"Are you sure you want to delete this chapter?": "Are you sure you want to delete this chapter?",
+	"Are you sure you want to delete this request": "Are you sure you want to delete this request",
 	"Are you sure you want to reject this course? ": "Are you sure you want to reject this course? ",
 	"Are you sure you want to reject this instructor? ": "Are you sure you want to reject this instructor? ",
 	"Are you sure you want to remove all chapters?": "Are you sure you want to remove all chapters?",
@@ -143,6 +144,7 @@
 	"Date from": "Date from",
 	"Date to": "Date to",
 	"Deactivated Successfully": "Deactivated Successfully",
+	"Deleted Successfully": "Deleted Successfully",
 	"Description": "Description",
 	"Disabled": "Disabled",
 	"Do you want to play the from this browser": "Do you want to play the from this browser",
@@ -250,6 +252,7 @@
 	"Next": "Next",
 	"No": "No",
 	"No Description": "No Description",
+	"No Results Found": "No Results Found",
 	"No result found": "No result found",
 	"Or": "Or",
 	"Order Details": "Order Details",
@@ -293,7 +296,6 @@
 	"Science": "Science",
 	"Search": "Search",
 	"Search By": "Search By",
-	"Search by": "Search by",
 	"Search by Email or Phone Number": "Search by Email or Phone Number",
 	"Second": "Second",
 	"Secure checkout": "Secure checkout",
@@ -332,6 +334,7 @@
 	"Terms": "Terms",
 	"Terms of Use": "Terms of Use",
 	"Thank You": "Thank You",
+	"Third": "Third",
 	"Thursday": "Thursday",
 	"Title": "Title",
 	"Total Chapters": "Total Chapters",
@@ -418,7 +421,6 @@
 	"student": "Student",
 	"student mobile number:": "Student Mobile Number:",
 	"student name:": "Student Name:",
-	"subject Name": "subject Name",
 	"sunday": "sunday",
 	"this chapter contains lectures, can't be deleted": "This chapter contains lectures, can't be deleted",
 	"this course contains chapters, can't be deleted": "This course contains chapters, can't be deleted",
