--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -94,12 +94,16 @@
 	"Are you sure you want to Approve this instructor? ": "هل تريد الموافقة على هذا المحاضر؟ ",
 	"Are you sure you want to Approve this payment of ": "هل تريد الموافقة على هذا الدفع؟ ",
 	"Are you sure you want to Reject this payment of ": "هل تريد الغا هذا الدفع؟",
+	"Are you sure you want to active this user? ": "Are you sure you want to active this user? ",
 	"Are you sure you want to block this user? ": "Are you sure you want to block this user? ",
+	"Are you sure you want to deactivate this user? ": "Are you sure you want to deactivate this user? ",
 	"Are you sure you want to delete this chapter?": "هل تريد إزالة هذا الفصل ؟",
 	"Are you sure you want to delete this request": "Are you sure you want to delete this request",
 	"Are you sure you want to reject this course? ": "هل تريد إلغاء هذا الكورس؟ ",
 	"Are you sure you want to reject this instructor? ": "هل تريد إلغاء هذا المحاضر ؟ ",
 	"Are you sure you want to remove all chapters?": "هل تريد حذف كل الفصول ؟",
+	"Are you sure you want to reset device to this user? ": "Are you sure you want to reset device to this user? ",
+	"Are you sure you want to reset password to this user? ": "Are you sure you want to reset password to this user? ",
 	"Are you sure you want to unblock this user? ": "Are you sure you want to unblock this user? ",
 	"Availability": "Availability",
 	"Back": "العودة",
@@ -146,6 +150,7 @@
 	"Deactivated Successfully": "تم الإلغاء بنجاح",
 	"Deleted Successfully": "Deleted Successfully",
 	"Description": "الوصف",
+	"Device reset Successfully": "Device reset Successfully",
 	"Disabled": "Disabled",
 	"Do you want to play the from this browser": "Do you want to play the from this browser",
 	"Don't have an account?": "ليس لديك حساب?",
@@ -153,6 +158,7 @@
 	"Duration": "الوقت",
 	"EGP": "ج.م",
 	"Edit Course ": "تعديل الكورس ",
+	"Edit Data Of User ": "Edit Data Of User ",
 	"Email": "الإيميل",
 	"Email Address": "البريد الإلكترونى",
 	"Email Address :": "البريد الإلكترونى :",
@@ -176,6 +182,7 @@
 	"Explore our schools to find your perfect course": "اكتشف سمارت اكاديمى ",
 	"Export": "Export",
 	"File not supported": "الملف غير مدّعم",
+	"Filter": "Filter",
 	"Forgot Password": "نسييت كلمة المرور",
 	"French": "فرنساوي",
 	"General Information": "معلومات عامة",
@@ -184,6 +191,7 @@
 	"German": "ألماني",
 	"Get Started": "إبدا الان",
 	"Go to home": "العودة للصفحة الرئيسية",
+	"Grade": "Grade",
 	"Grade 1": "الصف 1",
 	"Grade 2": "الصف 2",
 	"Grade 3": "الصف 3",
@@ -244,6 +252,7 @@
 	"Math": "الرياضيات",
 	"Menu": "القائمة",
 	"Minutes": "الدقائق",
+	"Mobile Number": "Mobile Number",
 	"Monday": "Monday",
 	"More": "المزيد",
 	"My Courses": "الكورسات الخاصة بك",
@@ -285,6 +294,7 @@
 	"Rejected": "متوقف",
 	"Remove All": "حذف الكل",
 	"Request a Password Reset": "طلب استعادة كلمة المرور",
+	"Reset Email sent Successfully": "Reset Email sent Successfully",
 	"Reset My Password": "تغيير كلمة المرور",
 	"Reset Password": "تغيير كلمة المرور",
 	"Reset Your Password": "تغيير كلمة المرور",
@@ -323,6 +333,7 @@
 	"Student Name": "اسم الطالب",
 	"Student Payment": "دفع الطالب",
 	"Student Payment Advanced Search": "Student Payment Advanced Search",
+	"StudentName": "StudentName",
 	"Students who watch a well-made promo video are 5X more likely to enroll in your course": {
 		" We've seen that statistic go up to 10X for exceptionally awesome videos": {
 			" Learn how to make yours awesome!": "  الطلاب التى تشاهد فيديوهات توضيحية ذات جودة تقوم بالأشتراك 5 أضعاف عن الطلاب الأخرين. تشير الأحصائيات الى زيادة عدد المشاهدات عشر اضعاف . ."
@@ -345,6 +356,7 @@
 	"Tuesday": "Tuesday",
 	"Unblock": "حذف الحظر",
 	"Unexpected error occurred, please try again": "حدث خطأ غير متوقع, يرجى المحاولة مرة اخرى",
+	"Update": "Update",
 	"Upload Video or File*": "حمل فيديو / ملف*",
 	"User Name": "User Name",
 	"View Saved Chapters": "عرض الفصول المسجلة",
@@ -367,6 +379,7 @@
 		"": "لا يدعم المتصفح الخاص بك هذا الامتداد."
 	},
 	"Your order submitted successfully": "لقد تم تسجيل طلبك بنجاح",
+	"activated Successfully": "activated Successfully",
 	"and": "و",
 	"arabic": "arabic",
 	"block": "block",
@@ -382,6 +395,7 @@
 	"course Title": "عنوان الكورس",
 	"course name:": "اسم الكورس:",
 	"create Date": "تاريخ الإنشاء",
+	"deactivated Successfully": "deactivated Successfully",
 	"delete enrollment request": "delete enrollment request",
 	"email": "الإيميل",
 	"example: Elkashef": "مثال : محمود",
@@ -389,7 +403,6 @@
 	"fee": "الرسوم",
 	"first": "first",
 	"first Name": "الإسم الأول",
-	"grade": "grade",
 	"instructor": "المحاضر",
 	"instructor mobile number:": "رقم محمول المحاضر:",
 	"instructor name:": "اسم المحاضر:",
