--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -94,12 +94,16 @@
 	"Are you sure you want to Approve this instructor? ": "Are you sure you want to Approve this instructor? ",
 	"Are you sure you want to Approve this payment of ": "Are you sure you want to Approve this payment of ",
 	"Are you sure you want to Reject this payment of ": "Are you sure you want to Reject this payment of ",
+	"Are you sure you want to active this user? ": "Are you sure you want to active this user? ",
 	"Are you sure you want to block this user? ": "Are you sure you want to block this user? ",
+	"Are you sure you want to deactivate this user? ": "Are you sure you want to deactivate this user? ",
 	"Are you sure you want to delete this chapter?": "Are you sure you want to delete this chapter?",
 	"Are you sure you want to delete this request": "Are you sure you want to delete this request",
 	"Are you sure you want to reject this course? ": "Are you sure you want to reject this course? ",
 	"Are you sure you want to reject this instructor? ": "Are you sure you want to reject this instructor? ",
 	"Are you sure you want to remove all chapters?": "Are you sure you want to remove all chapters?",
+	"Are you sure you want to reset device to this user? ": "Are you sure you want to reset device to this user? ",
+	"Are you sure you want to reset password to this user? ": "Are you sure you want to reset password to this user? ",
 	"Are you sure you want to unblock this user? ": "Are you sure you want to unblock this user? ",
 	"Availability": "Availability",
 	"Back": "Back",
@@ -146,6 +150,7 @@
 	"Deactivated Successfully": "Deactivated Successfully",
 	"Deleted Successfully": "Deleted Successfully",
 	"Description": "Description",
+	"Device reset Successfully": "Device reset Successfully",
 	"Disabled": "Disabled",
 	"Do you want to play the from this browser": "Do you want to play the from this browser",
 	"Don't have an account?": "Don't have an account?",
@@ -153,6 +158,7 @@
 	"Duration": "Duration",
 	"EGP": "EGP",
 	"Edit Course ": "Edit Course ",
+	"Edit Data Of User ": "Edit Data Of User ",
 	"Email": "Email",
 	"Email Address": "Email Address",
 	"Email Address :": "Email Address :",
@@ -176,6 +182,7 @@
 	"Explore our schools to find your perfect course": "Explore our schools to find your perfect course",
 	"Export": "Export",
 	"File not supported": "File not supported",
+	"Filter": "Filter",
 	"Forgot Password": "Forgot Password",
 	"French": "French",
 	"General Information": "General Information",
@@ -184,6 +191,7 @@
 	"German": "German",
 	"Get Started": "Get Started",
 	"Go to home": "Go to home",
+	"Grade": "Grade",
 	"Grade 1": "Grade 1",
 	"Grade 2": "Grade 2",
 	"Grade 3": "Grade 3",
@@ -244,6 +252,7 @@
 	"Math": "Math",
 	"Menu": "Menu",
 	"Minutes": "Minutes",
+	"Mobile Number": "Mobile Number",
 	"Monday": "Monday",
 	"More": "More",
 	"My Courses": "My Courses",
@@ -285,6 +294,7 @@
 	"Rejected": "Rejected",
 	"Remove All": "Remove All",
 	"Request a Password Reset": "Request a Password Reset",
+	"Reset Email sent Successfully": "Reset Email sent Successfully",
 	"Reset My Password": "Reset My Password",
 	"Reset Password": "Reset Password",
 	"Reset Your Password": "Reset Your Password",
@@ -323,6 +333,7 @@
 	"Student Name": "Student Name",
 	"Student Payment": "Student Payment",
 	"Student Payment Advanced Search": "Student Payment Advanced Search",
+	"StudentName": "StudentName",
 	"Students who watch a well-made promo video are 5X more likely to enroll in your course": {
 		" We've seen that statistic go up to 10X for exceptionally awesome videos": {
 			" Learn how to make yours awesome!": "Students who watch a well-made promo video are 5X more likely to enroll in your course. We've seen that statistic go up to 10X for exceptionally awesome videos. Learn how to make yours awesome!"
@@ -345,6 +356,7 @@
 	"Tuesday": "Tuesday",
 	"Unblock": "Unblock",
 	"Unexpected error occurred, please try again": "Unexpected error occurred, please try again",
+	"Update": "Update",
 	"Upload Video or File*": "Upload Video or File*",
 	"User Name": "User Name",
 	"View Saved Chapters": "View Saved Chapters",
@@ -367,6 +379,7 @@
 		"": "Your browser does not support the video tag."
 	},
 	"Your order submitted successfully": "Your order submitted successfully",
+	"activated Successfully": "activated Successfully",
 	"and": "and",
 	"arabic": "arabic",
 	"block": "block",
@@ -382,6 +395,7 @@
 	"course Title": "Course Title",
 	"course name:": "Course Name:",
 	"create Date": "Create Date",
+	"deactivated Successfully": "deactivated Successfully",
 	"delete enrollment request": "delete enrollment request",
 	"email": "Email",
 	"example: Elkashef": "example: Elkashef",
@@ -389,7 +403,6 @@
 	"fee": "Fee",
 	"first": "first",
 	"first Name": "First Name",
-	"grade": "grade",
 	"instructor": "Instructor",
 	"instructor mobile number:": "Instructor Mobile Number:",
 	"instructor name:": "Instructor Name:",
