--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -183,6 +183,8 @@
 	"Export": "Export",
 	"File not supported": "الملف غير مدّعم",
 	"Filter": "Filter",
+	"First Name": "First Name",
+	"FirstName": "FirstName",
 	"Forgot Password": "نسييت كلمة المرور",
 	"French": "فرنساوي",
 	"General Information": "معلومات عامة",
@@ -227,7 +229,9 @@
 	"LE": "ج.م",
 	"Language": "اللغة",
 	"Language*": "اللغة*",
+	"Last Name": "Last Name",
 	"Last updated ": "التعديل الأخير ",
+	"LastName": "LastName",
 	"Lecture Description*": "وصف المحاضرة*",
 	"Lecture Title": "عنوان المحاضرة",
 	"Lecture Title*": "عنوان المحاضرة*",
