--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -183,6 +183,8 @@
 	"Export": "Export",
 	"File not supported": "File not supported",
 	"Filter": "Filter",
+	"First Name": "First Name",
+	"FirstName": "FirstName",
 	"Forgot Password": "Forgot Password",
 	"French": "French",
 	"General Information": "General Information",
@@ -227,7 +229,9 @@
 	"LE": "LE",
 	"Language": "Language",
 	"Language*": "Language*",
+	"Last Name": "Last Name",
 	"Last updated ": "Last updated ",
+	"LastName": "LastName",
 	"Lecture Description*": "Lecture Description*",
 	"Lecture Title": "Lecture Title",
 	"Lecture Title*": "Lecture Title*",
