admin add course integration

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -86,10 +86,12 @@
 	"All": "All",
 	"All Courses": "كل الكورسات",
 	"All Rights Reserved": "كل الحقوق محفوظة",
+	"All Teachers": "All Teachers",
 	"Already have an account?": "لديك حساب مسجل بالفعل?",
 	"Amount": "Amount",
 	"Approve": "الموافقة",
 	"Approved": "تمت الموافقة",
+	"April": "April",
 	"Arabic": "عربي",
 	"Arabic Language": "لغة عربية",
 	"Are You Sure?": "هل انت متأكد ؟",
@@ -108,6 +110,7 @@
 	"Are you sure you want to reset device to this user? ": "Are you sure you want to reset device to this user? ",
 	"Are you sure you want to reset password to this user? ": "Are you sure you want to reset password to this user? ",
 	"Are you sure you want to unblock this user? ": "Are you sure you want to unblock this user? ",
+	"August": "August",
 	"Availability": "Availability",
 	"Back": "العودة",
 	"Back to Home": "العودة للرئيسية",
@@ -116,6 +119,7 @@
 	"Blocked": "Blocked",
 	"By": "بواسطة",
 	"By signing up, you agree to our": "عن طريق الإشتراك أنت توافق على ",
+	"CVC": "CVC",
 	"Cancel": "إلغاء",
 	"Chapter": "الفصل",
 	"Chapter Description*": "الوصف التوضيحى للفصل*",
@@ -153,6 +157,7 @@
 	"Date from": "Date from",
 	"Date to": "Date to",
 	"Deactivated Successfully": "تم الإلغاء بنجاح",
+	"December": "December",
 	"Deleted Successfully": "Deleted Successfully",
 	"Describe your issue or share your ideas": "Describe your issue or share your ideas",
 	"Description": "الوصف",
@@ -184,8 +189,11 @@
 	"Error while update chapter, please try again": "حدث خطأ خلال تعديل الفصل , يرجى المحاولة مرة اخرى",
 	"Error while update course, please try again": "حدث خطأ خلال تعديل الكورس ,يرجى المحاولة مرة اخرى",
 	"Error while update lecture, please try again": "حدث خطأ خلال تعديل المحاضرة, يرجى المحاولة مرة اخرى",
+	"Expiration Day": "Expiration Day",
+	"Expiration Month": "Expiration Month",
 	"Explore our schools to find your perfect course": "اكتشف سمارت اكاديمى ",
 	"Export": "Export",
+	"February": "February",
 	"File not supported": "الملف غير مدّعم",
 	"Filter": "Filter",
 	"First Name": "First Name",
@@ -205,6 +213,7 @@
 	"Grade 3": "الصف 3",
 	"Grades*": "الصفوف*",
 	"History": "تاريخ",
+	"Holder Name": "Holder Name",
 	"Home": " الرئيسية ",
 	"Insert description": "اضف التفاصيل",
 	"Insert your Chapter title": {
@@ -231,12 +240,16 @@
 	"Item No": {
 		"": "رقم"
 	},
+	"January": "January",
+	"July": "July",
+	"June": "June",
 	"LE": "ج.م",
 	"Language": "اللغة",
 	"Language*": "اللغة*",
 	"Last Name": "Last Name",
 	"Last updated ": "التعديل الأخير ",
 	"LastName": "LastName",
+	"Latest Courses": "Latest Courses",
 	"Lecture Description*": "وصف المحاضرة*",
 	"Lecture Title": "عنوان المحاضرة",
 	"Lecture Title*": "عنوان المحاضرة*",
@@ -255,15 +268,18 @@
 	"Main Address :": "العنوان الرئيسى :",
 	"Management Users": "Management Users",
 	"Managment users": "Managment users",
+	"March": "March",
 	"Match your goals to our classes, explore your options, and map out your path to success": {
 		"": "اكشتف اهدافك وابدا طريق النجاح"
 	},
 	"Math": "الرياضيات",
+	"May": "May",
 	"Mazen Mahmoud": "Mazen Mahmoud",
 	"Menu": "القائمة",
 	"Minutes": "الدقائق",
 	"Mobile": "Mobile",
 	"Mobile Number": "Mobile Number",
+	"Mohamed Ahmed": "Mohamed Ahmed",
 	"More": "المزيد",
 	"My Courses": "الكورسات الخاصة بك",
 	"My Dashboard": "الرئيسية",
@@ -301,6 +317,7 @@
 	"Promotional Video": "الفيديو الدعائى",
 	"Psychology": "علم نفس",
 	"Purchase History": "Purchase History",
+	"Purchase history": "Purchase history",
 	"Refresh table": "تجديد الجدول",
 	"Reject": "ايقاف",
 	"Rejected": "متوقف",
@@ -329,10 +346,12 @@
 	"Select Grade": "إختر الصف",
 	"Select Instructor": "Select Instructor",
 	"Select Language": "إختر اللغة",
+	"Select Payment Method": "Select Payment Method",
 	"Select Subjects": "إختر المواد",
 	"Select screenshots to upload": "Select screenshots to upload",
 	"Select status": "Select status",
 	"Send Feedback": "Send Feedback",
+	"September": "September",
 	"Shopping cart": "كارت التسوق",
 	"Sign In": "تسجيل الدخول",
 	"Sign Out": "تسجيل الخروج",
@@ -357,6 +376,7 @@
 	"Subjects*": "المواد*",
 	"Submit for Review": "التسجيل للمراجعة",
 	"Table of content": "جدول المحتوى",
+	"Teachers": "Teachers",
 	"Terms": "القواعد",
 	"Terms of Use": "قواعد الأستحدام",
 	"Thank You": " شكرا لك",
@@ -378,7 +398,6 @@
 	"View Saved Chapters": "عرض الفصول المسجلة",
 	"View Saved Lecture": "عرض المحاضرات المسجلة",
 	"Welcome Back": "مرحبا بعودتك",
-	"Welcome to Smart Academy": "مرحبا بك فى سمارت اكاديمى",
 	"You account has beed activated successfully, please login": {
 		"": "لقد تم تفعيل الحساب بنجاح, يرجى تسجيل الدخول."
 	},
@@ -402,6 +421,7 @@
 	"both": "both",
 	"cancel": "إلغاء",
 	"cancel edit": "إلغاء التعديل",
+	"card Number": "card Number",
 	"chapter name:": "اسم الفصل:",
 	"chapters": "الفصول",
 	"confirm": "التاكيد",
@@ -418,7 +438,6 @@
 	"fee": "الرسوم",
 	"first": "first",
 	"first Name": "الإسم الأول",
-	"instructor": "المحاضر",
 	"instructor Name*": "instructor Name*",
 	"instructor mobile number:": "رقم محمول المحاضر:",
 	"instructor name:": "اسم المحاضر:",
@@ -435,6 +454,8 @@
 		}
 	},
 	"m": "د",
+	"november": "november",
+	"october": "october",
 	"or drag and drop screenshots": "or drag and drop screenshots",
 	"password": "كلمة المرور",
 	"password doesn't match": "كلمة المرور غير متطابقة",
@@ -443,11 +464,10 @@
 	"please enter a valid password, min 8 characters": "   من فضلك ادخل كلمة مرور صحيحة ,اقل عدد  8حروف ",
 	"please try again": "please try again",
 	"please try again!": "please try again!",
+	"purchase history": "purchase history",
 	"sign Up": "الإشتراك",
-	"sign Up as": "الإشتراك كـ",
 	"sort": "الترتيب",
 	"sort ": "الترتيب ",
-	"student": "الطالب",
 	"student mobile number:": "رقم محمول الطالب:",
 	"student name:": "اسم الطالب:",
 	"this chapter contains lectures, can't be deleted": "يحتوى هذا الفصل على محاضرات,لا يمكن حذفه",
