--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -86,10 +86,12 @@
 	"All": "All",
 	"All Courses": "All Courses",
 	"All Rights Reserved": "All Rights Reserved",
+	"All Teachers": "All Teachers",
 	"Already have an account?": "Already have an account?",
 	"Amount": "Amount",
 	"Approve": "Approve",
 	"Approved": "Approved",
+	"April": "April",
 	"Arabic": "عربى",
 	"Arabic Language": "Arabic Language",
 	"Are You Sure?": "Are You Sure?",
@@ -108,6 +110,7 @@
 	"Are you sure you want to reset device to this user? ": "Are you sure you want to reset device to this user? ",
 	"Are you sure you want to reset password to this user? ": "Are you sure you want to reset password to this user? ",
 	"Are you sure you want to unblock this user? ": "Are you sure you want to unblock this user? ",
+	"August": "August",
 	"Availability": "Availability",
 	"Back": "Back",
 	"Back to Home": "Back to Home",
@@ -116,6 +119,7 @@
 	"Blocked": "Blocked",
 	"By": "By",
 	"By signing up, you agree to our": "By signing up, you agree to our",
+	"CVC": "CVC",
 	"Cancel": "Cancel",
 	"Chapter": "Chapter",
 	"Chapter Description*": "Chapter Description*",
@@ -153,6 +157,7 @@
 	"Date from": "Date from",
 	"Date to": "Date to",
 	"Deactivated Successfully": "Deactivated Successfully",
+	"December": "December",
 	"Deleted Successfully": "Deleted Successfully",
 	"Describe your issue or share your ideas": "Describe your issue or share your ideas",
 	"Description": "Description",
@@ -184,8 +189,11 @@
 	"Error while update chapter, please try again": "Error while update chapter, please try again",
 	"Error while update course, please try again": "Error while update course, please try again",
 	"Error while update lecture, please try again": "Error while update lecture, please try again",
+	"Expiration Day": "Expiration Day",
+	"Expiration Month": "Expiration Month",
 	"Explore our schools to find your perfect course": "Explore our schools to find your perfect course",
 	"Export": "Export",
+	"February": "February",
 	"File not supported": "File not supported",
 	"Filter": "Filter",
 	"First Name": "First Name",
@@ -205,6 +213,7 @@
 	"Grade 3": "Grade 3",
 	"Grades*": "Grades*",
 	"History": "History",
+	"Holder Name": "Holder Name",
 	"Home": "Home",
 	"Insert description": "Insert description",
 	"Insert your Chapter title": {
@@ -231,12 +240,16 @@
 	"Item No": {
 		"": "Item No."
 	},
+	"January": "January",
+	"July": "July",
+	"June": "June",
 	"LE": "LE",
 	"Language": "Language",
 	"Language*": "Language*",
 	"Last Name": "Last Name",
 	"Last updated ": "Last updated ",
 	"LastName": "LastName",
+	"Latest Courses": "Latest Courses",
 	"Lecture Description*": "Lecture Description*",
 	"Lecture Title": "Lecture Title",
 	"Lecture Title*": "Lecture Title*",
@@ -255,15 +268,18 @@
 	"Main Address :": "Main Address :",
 	"Management Users": "Management Users",
 	"Managment users": "Managment users",
+	"March": "March",
 	"Match your goals to our classes, explore your options, and map out your path to success": {
 		"": "Match your goals to our classes, explore your options, and map out your path to success."
 	},
 	"Math": "Math",
+	"May": "May",
 	"Mazen Mahmoud": "Mazen Mahmoud",
 	"Menu": "Menu",
 	"Minutes": "Minutes",
 	"Mobile": "Mobile",
 	"Mobile Number": "Mobile Number",
+	"Mohamed Ahmed": "Mohamed Ahmed",
 	"More": "More",
 	"My Courses": "My Courses",
 	"My Dashboard": "My Dashboard",
@@ -301,6 +317,7 @@
 	"Promotional Video": "Promotional Video",
 	"Psychology": "Psychology",
 	"Purchase History": "Purchase History",
+	"Purchase history": "Purchase history",
 	"Refresh table": "Refresh table",
 	"Reject": "Reject",
 	"Rejected": "Rejected",
@@ -329,10 +346,12 @@
 	"Select Grade": "Select Grade",
 	"Select Instructor": "Select Instructor",
 	"Select Language": "Select Language",
+	"Select Payment Method": "Select Payment Method",
 	"Select Subjects": "Select Subjects",
 	"Select screenshots to upload": "Select screenshots to upload",
 	"Select status": "Select status",
 	"Send Feedback": "Send Feedback",
+	"September": "September",
 	"Shopping cart": "Shopping cart",
 	"Sign In": "Sign In",
 	"Sign Out": "Sign Out",
@@ -357,6 +376,7 @@
 	"Subjects*": "Subjects*",
 	"Submit for Review": "Submit for Review",
 	"Table of content": "Table of content",
+	"Teachers": "Teachers",
 	"Terms": "Terms",
 	"Terms of Use": "Terms of Use",
 	"Thank You": "Thank You",
@@ -378,7 +398,6 @@
 	"View Saved Chapters": "View Saved Chapters",
 	"View Saved Lecture": "View Saved Lecture",
 	"Welcome Back": "Welcome Back",
-	"Welcome to Smart Academy": "Welcome to Smart Academy",
 	"You account has beed activated successfully, please login": {
 		"": "You account has beed activated successfully, please login."
 	},
@@ -402,6 +421,7 @@
 	"both": "both",
 	"cancel": "Cancel",
 	"cancel edit": "Cancel Edit",
+	"card Number": "card Number",
 	"chapter name:": "Chapter Name:",
 	"chapters": "Chapters",
 	"confirm": "Confirm",
@@ -418,7 +438,6 @@
 	"fee": "Fee",
 	"first": "first",
 	"first Name": "First Name",
-	"instructor": "Instructor",
 	"instructor Name*": "instructor Name*",
 	"instructor mobile number:": "Instructor Mobile Number:",
 	"instructor name:": "Instructor Name:",
@@ -435,6 +454,8 @@
 		}
 	},
 	"m": "m",
+	"november": "november",
+	"october": "october",
 	"or drag and drop screenshots": "or drag and drop screenshots",
 	"password": "Password",
 	"password doesn't match": "Password doesn't match",
@@ -443,11 +464,10 @@
 	"please enter a valid password, min 8 characters": "Please enter a valid password, min 8 characters",
 	"please try again": "please try again",
 	"please try again!": "please try again!",
+	"purchase history": "purchase history",
 	"sign Up": "Sign Up",
-	"sign Up as": "Sign Up as",
 	"sort": "Sort",
 	"sort ": "Sort ",
-	"student": "Student",
 	"student mobile number:": "Student Mobile Number:",
 	"student name:": "Student Name:",
 	"this chapter contains lectures, can't be deleted": "This chapter contains lectures, can't be deleted",
