create course admin mod

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -56,6 +56,7 @@
 	"*Please select course": "*Please select course",
 	"*Please select cover image": "*Please select cover image",
 	"*Please select grade": "*Please select grade",
+	"*Please select instructor": "*Please select instructor",
 	"*Please select language": "*Please select language",
 	"*Please select lecture File": "*Please select lecture File",
 	"*Please select promo video": "*Please select promo video",
@@ -350,6 +351,7 @@
 	"Select Subjects": "Select Subjects",
 	"Select screenshots to upload": "Select screenshots to upload",
 	"Select status": "Select status",
+	"Select the instructor": "Select the instructor",
 	"Send Feedback": "Send Feedback",
 	"September": "September",
 	"Shopping cart": "Shopping cart",
