--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -56,6 +56,7 @@
 	"*Please select course": "*يرجى اختيار الكورس",
 	"*Please select cover image": "*يرجى اختيار الصورة الرئيسية",
 	"*Please select grade": "*يرجى اختيار الصف",
+	"*Please select instructor": "*Please select instructor",
 	"*Please select language": "*يرجى إختيار اللغة",
 	"*Please select lecture File": "*يرجى إختيار ملف المحاضرة",
 	"*Please select promo video": "*يرجى إختيار الفيديو التوضيحى",
@@ -350,6 +351,7 @@
 	"Select Subjects": "إختر المواد",
 	"Select screenshots to upload": "Select screenshots to upload",
 	"Select status": "Select status",
+	"Select the instructor": "Select the instructor",
 	"Send Feedback": "Send Feedback",
 	"September": "September",
 	"Shopping cart": "كارت التسوق",
